...
            }
            return const Center(
              child: Text('Nenhum post encontrado'),
            );
          },
        ),
        floatingActionButton: FloatingActionButton(key: const Key('button_add_key'),
          backgroundColor: Colors.green,
          onPressed: () {
            Navigator.of(context).push(MaterialPageRoute(
                builder: (context) => const CreatePostPage()));
          },
          child: const Icon(Icons.add),
...
